--- a/projects/mds-angular-persian-date-time-picker/src/lib/mds-angular-persian-date-time-picker.component.css
+++ b/projects/mds-angular-persian-date-time-picker/src/lib/mds-angular-persian-date-time-picker.component.css
@@ -5,16 +5,21 @@
 
 .datepicker {
   background: #fff;
-  position: absolute;
   z-index: 999999;
-  top: 53px;
-  left: 0;
+  position: absolute;
   min-width: 300px;
   border: solid 1px #e7e7e7;
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, .2), 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12);
-  border: 1px solid #f7f7f7;
 }
 
+.top {
+  bottom: 53px;
+  left: 0;
+}
+.bottom{
+  top: 53px;
+  left: 0;
+}
 .datepicker-bootstrap {
   top: 34px;
 }
